--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.11.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.9",
+    "lucide": "^0.544.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
